--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:text="Push Me!"
-        android:id="@+id/button"
+        android:id="@+id/btn_push"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:textSize="40dp"
